Update index.html, requirements.txt, and SETUP.md to enhance site metadata, add validation dependencies, and correct repository links. Update channels-data.js timestamp for data generation.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🚀 DevOps YouTube Channels - Tu Portal de Aprendizaje DevOps</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad1' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%23667eea;stop-opacity:1' /><stop offset='100%' style='stop-color:%23764ba2;stop-opacity:1' /></linearGradient></defs><rect width='100' height='100' fill='url(%23grad1)' rx='20'/><text x='50' y='35' font-family='Arial, sans-serif' font-size='20' font-weight='bold' text-anchor='middle' fill='white'>DevOps</text><text x='50' y='65' font-family='Arial, sans-serif' font-size='16' text-anchor='middle' fill='white'>📺</text></svg>">
+    <meta name="description" content="Descubre los mejores canales de YouTube para aprender DevOps, Platform Engineering, Cloud Computing y tecnologías modernas. Más de 80 canales curados por expertos.">
+    <meta name="keywords" content="DevOps, YouTube, Platform Engineering, Cloud Computing, Kubernetes, Docker, CI/CD, AWS, Azure, Terraform">
+    <meta name="author" content="DevOps Community">
+    <meta property="og:title" content="DevOps YouTube Channels - Tu Portal de Aprendizaje DevOps">
+    <meta property="og:description" content="Más de 80 canales curados para aprender DevOps, Cloud y tecnologías modernas">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://github.com/jersonmartinez/DevOps-YouTube-Channels">
+    <meta name="twitter:card" content="summary_large_image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -37,6 +46,11 @@
                         <i class="bi bi-list-ul"></i>
                     </button>
                 </div>
+                
+                <!-- Contribute Button -->
+                <a href="contribute.html" class="btn btn-sm btn-success me-3">
+                    <i class="bi bi-plus-circle me-1"></i>Contribuir
+                </a>
                 
                 <!-- Theme Toggle -->
                 <button class="btn btn-sm btn-outline-secondary me-3" id="themeToggle">
@@ -372,7 +386,7 @@
                         Cloud Computing, y tecnologías modernas.
                     </p>
                     <div class="social-links">
-                        <a href="https://github.com/yourusername/DevOps-YouTube-Channels" target="_blank" class="social-link">
+                        <a href="https://github.com/jersonmartinez/DevOps-YouTube-Channels" target="_blank" class="social-link">
                             <i class="bi bi-github"></i>
                         </a>
                         <a href="#" class="social-link">
@@ -387,9 +401,9 @@
                     <h6 class="mb-3">Enlaces Rápidos</h6>
                     <ul class="footer-links">
                         <li><a href="#" onclick="showAbout()">Acerca de</a></li>
-                        <li><a href="https://github.com/yourusername/DevOps-YouTube-Channels" target="_blank">Contribuir</a></li>
+                        <li><a href="https://github.com/jersonmartinez/DevOps-YouTube-Channels" target="_blank">Contribuir</a></li>
                         <li><a href="SETUP.md" target="_blank">Documentación</a></li>
-                        <li><a href="https://github.com/yourusername/DevOps-YouTube-Channels/issues" target="_blank">Reportar problema</a></li>
+                        <li><a href="https://github.com/jersonmartinez/DevOps-YouTube-Channels/issues" target="_blank">Reportar problema</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
